--- a/frontend/src/assets/stylesheets/max-w.scss
+++ b/frontend/src/assets/stylesheets/max-w.scss
@@ -1,9 +1,14 @@
 $utilities: map-merge(
   $utilities,
   (
-    "cursor": (
+    "max-width-as-breakpoint": (
       property: max-width,
       class: max-w,
+      values: $container-max-widths,
+    ),
+    "width-as-breakpoint": (
+      property: width,
+      class: w,
       values: $container-max-widths,
     ),
   )
